--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,14 @@
  Change History
 ================
 
+0.2.1 [2011-11-28]
+================================
+
+* Add expiration to data types
+
+0.2.0 [2010-11-03]
+==================
+
 0.0.1 [2010-04-29 04:40 P.M CET]
 ================================
 
